Fix overflow

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -72,7 +72,7 @@ section.main-hero {
 				max-width: 760px;
 				max-height: 680px;
 				@media (max-width: 950px) {
-					min-width: 330px;
+					min-width: 290px;
 					max-width: 600px;
 				}
 			}
